...

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home">


        <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/buy" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.076"
                android:id="@+id/sell">

            <androidx.constraintlayout.widget.ConstraintLayout
...
