...
            app:cardBackgroundColor="#00838f"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/first_year" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.13" app:layout_constraintVertical_bias="0.23"
            android:id="@+id/third_year">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="THIRD"
                    android:textStyle="bold"
...
